--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.6",
+    "@types/supertest": "^2.0.15",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "npm": "^9.8.1",
     "prisma": "^5.4.2",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsup": "^7.2.0",
